Callsets multi proj (#29)
* Minor change

* Moving towards making UI support working with samples

* Considering referenceSets are attached to programs, not studies

* Import refactoring and Split Sample into 2 new collections : IndSample and CallSets

* Remove pj and rn fields from GenotypingSample and update queries to get callsets from individuals

* CallSets now embedded in Samples

* Fixing errors due to addition of CallSet level

* Ready for testing (except VariantSetsApiController)

* fix build error in variansetsApiController

* Minor fix

* fix missing variants in Flapjack export and fix error 500 when no sampleIds are found in search/allelematrix

* Show also individuals metadata when loading samples metadata

* Fix search/samples BrAPI endpoint when filtering on sampleDbIds

* Minor change

* Incremented version number

---------

Co-authored-by: Alice Boizet <alice.boizet@cirad.fr>